ocio-sys/src/bridge.hpp

void ocio_config_clear_virtual_display(void* handle);
int ocio_config_instantiate_display_from_monitor_name(void* handle, const char* monitorName);
int ocio_config_instantiate_display_from_icc_profile(void* handle, const char* ICCProfileFilepath);
void ocio_config_set_active_displays(void* handle, const char* displays);
void* ocio_config_get_active_displays(void* handle);
int ocio_config_get_num_active_displays(void* handle);
void* ocio_config_get_active_display(void* handle, int index);
void ocio_config_add_active_display(void* handle, const char* display);
void ocio_config_remove_active_display(void* handle, const char* display);
void ocio_config_clear_active_displays(void* handle);
void ocio_config_set_active_views(void* handle, const char* views);
void* ocio_config_get_active_views(void* handle);
int ocio_config_get_num_active_views(void* handle);
void* ocio_config_get_active_view(void* handle, int index);
void ocio_config_add_active_view(void* handle, const char* view);
void ocio_config_remove_active_view(void* handle, const char* view);
void ocio_config_clear_active_views(void* handle);
int ocio_config_get_num_displays_all(void* handle);
void* ocio_config_get_display_all(void* handle, int index);
int ocio_config_get_display_all_by_name(void* handle, void* arg0);
bool ocio_config_is_display_temporary(void* handle, int index);
void ocio_config_set_display_temporary(void* handle, int index, bool isTemporary);
int ocio_config_get_num_views_v2(void* handle, int type, const char* display);
void* ocio_config_get_view_v2(void* handle, int type, const char* display, int index);
void* ocio_config_get_viewing_rules(void* handle);
void ocio_config_set_viewing_rules(void* handle, void* viewingRules);
void ocio_config_get_default_luma_coefs(void* handle, void* rgb);
void ocio_config_set_default_luma_coefs(void* handle, const double* rgb);
void* ocio_config_get_look(void* handle, const char* name);
int ocio_config_get_num_looks(void* handle);
void* ocio_config_get_look_name_by_index(void* handle, int index);
void ocio_config_add_look(void* handle, void* look);
void ocio_config_clear_looks(void* handle);
int ocio_config_get_num_view_transforms(void* handle);
void* ocio_config_get_view_transform(void* handle, const char* name);
void* ocio_config_get_view_transform_name_by_index(void* handle, int i);
void ocio_config_add_view_transform(void* handle, void* viewTransform);
void* ocio_config_get_default_scene_to_display_view_transform(void* handle);
void* ocio_config_get_default_view_transform_name(void* handle);
void ocio_config_set_default_view_transform_name(void* handle, const char* defaultName);
void ocio_config_clear_view_transforms(void* handle);
int ocio_config_get_num_named_transforms(void* handle, int visibility);
void* ocio_config_get_named_transform_name_by_index(void* handle, int visibility, int index);
int ocio_config_get_num_named_transforms_v1(void* handle);
void* ocio_config_get_named_transform_name_by_index_v1(void* handle, int index);
int ocio_config_get_index_for_named_transform(void* handle, const char* name);
void* ocio_config_get_named_transform(void* handle, const char* name);
void ocio_config_add_named_transform(void* handle, void* namedTransform);
void ocio_config_remove_named_transform(void* handle, const char* name);
void ocio_config_clear_named_transforms(void* handle);
void* ocio_config_get_file_rules(void* handle);
void ocio_config_set_file_rules(void* handle, void* fileRules);
void* ocio_config_get_color_space_from_filepath(void* handle, const char* filePath);
void* ocio_config_get_color_space_from_filepath_by_ref_type(void* handle, const char* filePath, void* ruleIndex);
void* ocio_config_get_color_space_from_filepath_with_rule_index(void* handle, const char* filePath, size_t* ruleIndex);
bool ocio_config_filepath_only_matches_default_rule(void* handle, const char* filePath);
void* ocio_config_parse_color_space_from_string(void* handle, const char* str);
bool ocio_config_is_strict_parsing_enabled(void* handle);
void ocio_config_set_strict_parsing_enabled(void* handle, bool enabled);
void* ocio_config_get_processor(void* handle, void* context, void* srcColorSpace, void* dstColorSpace);
void* ocio_config_get_processor_v1(void* handle, void* srcColorSpace, void* dstColorSpace);
void* ocio_config_get_processor_v2(void* handle, const char* srcColorSpaceName, const char* dstColorSpaceName);
void* ocio_config_get_processor_v3(void* handle, void* context, const char* srcColorSpaceName, const char* dstColorSpaceName);
void* ocio_config_get_processor_v4(void* handle, const char* srcColorSpaceName, const char* display, const char* view, int direction);
void* ocio_config_get_processor_v5(void* handle, void* context, const char* srcColorSpaceName, const char* display, const char* view, int direction);
void* ocio_config_get_processor_v6(void* handle, void* namedTransform, int direction);
void* ocio_config_get_processor_v7(void* handle, void* context, void* namedTransform, int direction);
void* ocio_config_get_processor_v8(void* handle, const char* namedTransformName, int direction);
void* ocio_config_get_processor_v9(void* handle, void* context, const char* namedTransformName, int direction);
void* ocio_config_get_processor_v10(void* handle, void* transform);
void* ocio_config_get_processor_v11(void* handle, void* transform, int direction);
void* ocio_config_get_processor_v12(void* handle, void* context, void* transform, int direction);
void* ocio_config_get_processor_to_builtin_color_space(void* handle, void* srcConfig, const char* srcColorSpaceName, const char* builtinColorSpaceName);
void* ocio_config_get_processor_from_builtin_color_space(void* handle, const char* builtinColorSpaceName, void* srcConfig, const char* srcColorSpaceName);
void* ocio_config_get_processor_from_configs(void* handle, void* srcConfig, const char* srcColorSpaceName, void* dstConfig, const char* dstColorSpaceName);
void* ocio_config_get_processor_from_configs_v1(void* handle, void* srcContext, void* srcConfig, const char* srcColorSpaceName, void* dstContext, void* dstConfig, const char* dstColorSpaceName);
void* ocio_config_get_processor_from_configs_v2(void* handle, void* srcConfig, const char* srcColorSpaceName, const char* srcInterchangeName, void* dstConfig, const char* dstColorSpaceName, const char* dstInterchangeName);
void* ocio_config_get_processor_from_configs_v3(void* handle, void* srcContext, void* srcConfig, const char* srcColorSpaceName, const char* srcInterchangeName, void* dstContext, void* dstConfig, const char* dstColorSpaceName, const char* dstInterchangeName);
void* ocio_config_get_processor_from_configs_v4(void* handle, void* srcConfig, const char* srcColorSpaceName, void* dstConfig, const char* dstDisplay, const char* dstView, int direction);
void* ocio_config_get_processor_from_configs_v5(void* handle, void* srcContext, void* srcConfig, const char* srcColorSpaceName, void* dstContext, void* dstConfig, const char* dstDisplay, const char* dstView, int direction);
void* ocio_config_get_processor_from_configs_v6(void* handle, void* srcConfig, const char* srcColorSpaceName, const char* srcInterchangeName, void* dstConfig, const char* dstDisplay, const char* dstView, const char* dstInterchangeName, int direction);
void* ocio_config_get_processor_from_configs_v7(void* handle, void* srcContext, void* srcConfig, const char* srcColorSpaceName, const char* srcInterchangeName, void* dstContext, void* dstConfig, const char* dstDisplay, const char* dstView, const char* dstInterchangeName, int direction);
int ocio_config_get_processor_cache_flags(void* handle);
void ocio_config_set_processor_cache_flags(void* handle, int flags);
void ocio_config_clear_processor_cache(void* handle);
void ocio_config_set_config_io_proxy(void* handle, void* ciop);
void* ocio_config_get_config_io_proxy(void* handle);
bool ocio_config_is_archivable(void* handle);
void ocio_config_archive(void* handle, void* ostream);
void* ocio_config_archive_to_string(void* handle);