ocio-sys/src/lib.rs

    pub fn ocio_config_clear_virtual_display(handle: *mut c_void) -> ();
    pub fn ocio_config_instantiate_display_from_monitor_name(
        handle: *mut c_void,
        monitorName: *const i8,
    ) -> i32;
    pub fn ocio_config_instantiate_display_from_icc_profile(
        handle: *mut c_void,
        ICCProfileFilepath: *const i8,
    ) -> i32;
    pub fn ocio_config_set_active_displays(handle: *mut c_void, displays: *const i8) -> ();
    pub fn ocio_config_get_active_displays(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_get_num_active_displays(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_active_display(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_add_active_display(handle: *mut c_void, display: *const i8) -> ();
    pub fn ocio_config_remove_active_display(handle: *mut c_void, display: *const i8) -> ();
    pub fn ocio_config_clear_active_displays(handle: *mut c_void) -> ();
    pub fn ocio_config_set_active_views(handle: *mut c_void, views: *const i8) -> ();
    pub fn ocio_config_get_active_views(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_get_num_active_views(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_active_view(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_add_active_view(handle: *mut c_void, view: *const i8) -> ();
    pub fn ocio_config_remove_active_view(handle: *mut c_void, view: *const i8) -> ();
    pub fn ocio_config_clear_active_views(handle: *mut c_void) -> ();
    pub fn ocio_config_get_num_displays_all(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_display_all(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_get_display_all_by_name(handle: *mut c_void, arg0: *mut c_void) -> i32;
    pub fn ocio_config_is_display_temporary(handle: *mut c_void, index: i32) -> bool;
    pub fn ocio_config_set_display_temporary(
        handle: *mut c_void,
        index: i32,
        isTemporary: bool,
    ) -> ();
    pub fn ocio_config_get_num_views_v2(
        handle: *mut c_void,
        type_param: i32,
        display: *const i8,
    ) -> i32;
    pub fn ocio_config_get_view_v2(
        handle: *mut c_void,
        type_param: i32,
        display: *const i8,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_viewing_rules(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_viewing_rules(handle: *mut c_void, viewingRules: *mut c_void) -> ();
    pub fn ocio_config_get_default_luma_coefs(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_config_set_default_luma_coefs(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_config_get_look(handle: *mut c_void, name: *const i8) -> *mut c_void;
    pub fn ocio_config_get_num_looks(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_look_name_by_index(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_config_add_look(handle: *mut c_void, look: *mut c_void) -> ();
    pub fn ocio_config_clear_looks(handle: *mut c_void) -> ();
    pub fn ocio_config_get_num_view_transforms(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_view_transform(handle: *mut c_void, name: *const i8) -> *mut c_void;
    pub fn ocio_config_get_view_transform_name_by_index(handle: *mut c_void, i: i32)
        -> *mut c_void;
    pub fn ocio_config_add_view_transform(handle: *mut c_void, viewTransform: *mut c_void) -> ();
    pub fn ocio_config_get_default_scene_to_display_view_transform(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_config_get_default_view_transform_name(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_default_view_transform_name(
        handle: *mut c_void,
        defaultName: *const i8,
    ) -> ();
    pub fn ocio_config_clear_view_transforms(handle: *mut c_void) -> ();
    pub fn ocio_config_get_num_named_transforms(handle: *mut c_void, visibility: i32) -> i32;
    pub fn ocio_config_get_named_transform_name_by_index(
        handle: *mut c_void,
        visibility: i32,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_num_named_transforms_v1(handle: *mut c_void) -> i32;
    pub fn ocio_config_get_named_transform_name_by_index_v1(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_index_for_named_transform(handle: *mut c_void, name: *const i8) -> i32;
    pub fn ocio_config_get_named_transform(handle: *mut c_void, name: *const i8) -> *mut c_void;
    pub fn ocio_config_add_named_transform(handle: *mut c_void, namedTransform: *mut c_void) -> ();
    pub fn ocio_config_remove_named_transform(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_config_clear_named_transforms(handle: *mut c_void) -> ();
    pub fn ocio_config_get_file_rules(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_set_file_rules(handle: *mut c_void, fileRules: *mut c_void) -> ();
    pub fn ocio_config_get_color_space_from_filepath(
        handle: *mut c_void,
        filePath: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_color_space_from_filepath_by_ref_type(
        handle: *mut c_void,
        filePath: *const i8,
        ruleIndex: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_config_get_color_space_from_filepath_with_rule_index(
        handle: *mut c_void,
        filePath: *const i8,
        ruleIndex: *mut usize,
    ) -> *mut c_void;
    pub fn ocio_config_filepath_only_matches_default_rule(
        handle: *mut c_void,
        filePath: *const i8,
    ) -> bool;
    pub fn ocio_config_parse_color_space_from_string(
        handle: *mut c_void,
        str: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_is_strict_parsing_enabled(handle: *mut c_void) -> bool;
    pub fn ocio_config_set_strict_parsing_enabled(handle: *mut c_void, enabled: bool) -> ();
    pub fn ocio_config_get_processor(
        handle: *mut c_void,
        context: *mut c_void,
        srcColorSpace: *mut c_void,
        dstColorSpace: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v1(
        handle: *mut c_void,
        srcColorSpace: *mut c_void,
        dstColorSpace: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v2(
        handle: *mut c_void,
        srcColorSpaceName: *const i8,
        dstColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v3(
        handle: *mut c_void,
        context: *mut c_void,
        srcColorSpaceName: *const i8,
        dstColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v4(
        handle: *mut c_void,
        srcColorSpaceName: *const i8,
        display: *const i8,
        view: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v5(
        handle: *mut c_void,
        context: *mut c_void,
        srcColorSpaceName: *const i8,
        display: *const i8,
        view: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v6(
        handle: *mut c_void,
        namedTransform: *mut c_void,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v7(
        handle: *mut c_void,
        context: *mut c_void,
        namedTransform: *mut c_void,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v8(
        handle: *mut c_void,
        namedTransformName: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v9(
        handle: *mut c_void,
        context: *mut c_void,
        namedTransformName: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v10(
        handle: *mut c_void,
        transform: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v11(
        handle: *mut c_void,
        transform: *mut c_void,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_v12(
        handle: *mut c_void,
        context: *mut c_void,
        transform: *mut c_void,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_to_builtin_color_space(
        handle: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        builtinColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_builtin_color_space(
        handle: *mut c_void,
        builtinColorSpaceName: *const i8,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs(
        handle: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        dstConfig: *mut c_void,
        dstColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v1(
        handle: *mut c_void,
        srcContext: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        dstContext: *mut c_void,
        dstConfig: *mut c_void,
        dstColorSpaceName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v2(
        handle: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        srcInterchangeName: *const i8,
        dstConfig: *mut c_void,
        dstColorSpaceName: *const i8,
        dstInterchangeName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v3(
        handle: *mut c_void,
        srcContext: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        srcInterchangeName: *const i8,
        dstContext: *mut c_void,
        dstConfig: *mut c_void,
        dstColorSpaceName: *const i8,
        dstInterchangeName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v4(
        handle: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        dstConfig: *mut c_void,
        dstDisplay: *const i8,
        dstView: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v5(
        handle: *mut c_void,
        srcContext: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        dstContext: *mut c_void,
        dstConfig: *mut c_void,
        dstDisplay: *const i8,
        dstView: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v6(
        handle: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        srcInterchangeName: *const i8,
        dstConfig: *mut c_void,
        dstDisplay: *const i8,
        dstView: *const i8,
        dstInterchangeName: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_from_configs_v7(
        handle: *mut c_void,
        srcContext: *mut c_void,
        srcConfig: *mut c_void,
        srcColorSpaceName: *const i8,
        srcInterchangeName: *const i8,
        dstContext: *mut c_void,
        dstConfig: *mut c_void,
        dstDisplay: *const i8,
        dstView: *const i8,
        dstInterchangeName: *const i8,
        direction: i32,
    ) -> *mut c_void;
    pub fn ocio_config_get_processor_cache_flags(handle: *mut c_void) -> i32;
    pub fn ocio_config_set_processor_cache_flags(handle: *mut c_void, flags: i32) -> ();
    pub fn ocio_config_clear_processor_cache(handle: *mut c_void) -> ();
    pub fn ocio_config_set_config_io_proxy(handle: *mut c_void, ciop: *mut c_void) -> ();
    pub fn ocio_config_get_config_io_proxy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_config_is_archivable(handle: *mut c_void) -> bool;
    pub fn ocio_config_archive(handle: *mut c_void, ostream: *mut c_void) -> ();
    pub fn ocio_config_archive_to_string(handle: *mut c_void) -> *mut c_void;
